[package]
name = "news-rss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
axum = "0.2.5"
chrono = "0.4.19"
chrono-tz = "0.6.0"
futures = "0.3.17"
nipper = "0.1.9"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
rss = "1.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.28"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.24"

[features]
